Make logo smaller

--- a/_config.yml
+++ b/_config.yml
@@ -68,9 +68,9 @@ device: iphone-x-silver-vertical # REQUIRED
 background_color: white # Optional
 # background_image: /images/backgrounds/31-usersthink-stock-image-web.jpg # Optional - Use Relative path e.g. images/backgrounds/image.jpg
 text_color: black # Optional
-link_color: "#0191FF" # Optional
-social_link_color: "#0191FF" # Optional
-download_button_background_color: "#0191FF" # Optional
+link_color: "rgb(28, 145, 245)" # Optional
+social_link_color: "rgb(28, 145, 245)" # Optional
+download_button_background_color: "rgb(28, 145, 245)" # Optional
 download_button_text_color: white; # Optional
 
 #
